Updated code 24 July 11:40

--- a/src/app/modules/components/documents/documents.component.html
+++ b/src/app/modules/components/documents/documents.component.html
@@ -13,8 +13,8 @@
               <div class="dd-button">
                 <!-- <span><img alt="" src="/assets/img/drop-img-blue.png" class="drop-open"></span> -->
 
-                <app-dropdown-actions class="show-toggle" label="Monitor actions" [actions]="actions"
-                  (onSelect)="monitorAction($event)" (click)="stopPropagation($event)">
+                <app-dropdown-actions class="show-toggle" label="" [actions]="actions"
+                  (onSelect)="performActionsEvent($event)" (click)="stopPropagation($event)">
                   <button class="actions"></button>
                 </app-dropdown-actions>
               </div>
