--- a/src/app/modules/components/documents/documents.component.scss
+++ b/src/app/modules/components/documents/documents.component.scss
@@ -115,3 +115,14 @@
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
+
+.actions {
+  background: 0 0;
+  box-shadow: none;
+  color: #777;
+  padding: 0;
+  font-family: 'Material Icons';
+  font-size: 24px;
+  display: block;
+  border-radius: 3px;
+}
