--- a/src/app/modules/components/documents/documents.component.scss
+++ b/src/app/modules/components/documents/documents.component.scss
@@ -19,7 +19,7 @@
 }
 
 .upload-iconbr {
-  width: 9%;
+  width: 42px;
   float: left;
 }
 
@@ -29,8 +29,9 @@
 
 .upload-txbr {
   float: left;
-  width: 90%;
+  width: calc(100% - 52px);
   position: relative;
+  padding-left: 10px;
 }
 
 .file-name {
@@ -111,18 +112,32 @@
   padding: 0 7px;
 }
 
-.show-toggle.dropdown-actions.show .actions {
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
+// .show-toggle.dropdown-actions.show .actions {
+//   -webkit-transform: rotate(90deg);
+//   transform: rotate(90deg);
+// }
 
 .actions {
   background: 0 0;
   box-shadow: none;
-  color: #777;
-  padding: 0;
   font-family: 'Material Icons';
   font-size: 24px;
   display: block;
-  border-radius: 3px;
+  border: 1px solid #7f868f;
+  background-color: #7f868f;
+  color: #fff;
+  border-radius: 4px;
+  padding: 0px 10px;
+}
+.actions:hover,
+.actions:focus {
+  border: 1px solid #3d4754;
+  background-color: #3d4754;
+}
+
+.controls .dropdown-actions {
+  margin-left: 3px;
+}
+.actions i {
+  font-size: 16px;
 }
