--- a/src/app/modules/components/dropdown-actions/dropdown-actions.component.scss
+++ b/src/app/modules/components/dropdown-actions/dropdown-actions.component.scss
@@ -27,16 +27,21 @@
   top: 0;
   right: 0;
   background: white;
-  padding: 15px 10px 19px;
+  padding: 10px 10px;
   box-shadow: 0 10px 15px -5px rgba(#3d5270, .25);
   border-radius: 4px;
-  min-width: 200px;
+  min-width: 150px;
+  z-index: 1;
+  border-radius: 6px;
 
   & > ul {
     margin: 0;
     padding: 0;
     list-style: none;
   }
+}
+.dropdown ul li button {
+  font-size: 14px;
 }
 
 .label {
@@ -58,6 +63,7 @@ button {
   width: 100%;
   border-radius: 4px;
   font-size: inherit;
+  border-color: transparent;
 
   &:active,
   &:focus,
