Updated code 24 July 13:22

--- a/src/app/file-uploader.component.html
+++ b/src/app/file-uploader.component.html
@@ -1,26 +1,19 @@
 <div class="row">
 
 	<file-drop headertext="" (onFileDrop)="dropped($event)" (onFileOver)="fileOver($event)"
-		(onFileLeave)="fileLeave($event)" multiple="true" >
+		(onFileLeave)="fileLeave($event)" multiple="true">
 
 		<div class="drag-contbx" (click)="fileInput.click()">
 			<h1 class="">Drag & drop</h1>
 			<p class="or"><span>or</span></p>
 			<div class="addfile-btn">
 				<label class="button" for="file-name">Select files</label>
-				<!-- <label class="button" for="file-name" *ngIf="fileToUpload">Choose Different
-					File</label> -->
 				<input multiple type="file" #fileInput data-max-size="32"
 					accept=".xls,.xlsx, .jpg, .jpeg, .png, .pdf, .csv, .doc, .docx, .pptx, .ppt"
 					class="upload-file-input" id="file-name" (click)="resetArray()" (change)="addToQueue()">
 			</div>
 		</div>
 	</file-drop>
-
-	<!-- <div class="col-md-3">
-		<h3>Select files</h3>
-		<input type="file" #fileInput multiple (change)="addToQueue()" />
-	</div> -->
 
 	<div class="col-md-9">
 		<h3>Upload queue</h3>
@@ -35,7 +28,8 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr *ngFor="let item of failedQueue | async; let i = index" [title]="item.file.fileErrorTitle? item.file.fileErrorTitle: ''">
+				<tr *ngFor="let item of failedQueue | async; let i = index"
+					[title]="item.file.fileErrorTitle? item.file.fileErrorTitle: ''">
 					<ng-container>
 						{{item | json}}
 						<td>{{ item?.file?.name }}</td>
@@ -52,7 +46,8 @@
 					</ng-container>
 				</tr>
 
-				<tr *ngFor="let item of queue | async; let i = index" [title]="item.file.fileErrorTitle? item.file.fileErrorTitle: ''">
+				<tr *ngFor="let item of queue | async; let i = index"
+					[title]="item.file.fileErrorTitle? item.file.fileErrorTitle: ''">
 					<ng-container>
 						<td>{{ item?.file?.name }}</td>
 						<td class="text-right">{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
@@ -80,8 +75,6 @@
 				</tr>
 			</tbody>
 		</table>
-
-		<!-- {{uploader.numberOfUploadedFiles}} ------------------- {{(queue | async).length}} -->
 
 		<div>
 			<button class="button button-clear"
