--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -138,7 +138,7 @@
 .upload_modal-holder h3 {
   margin-bottom: 15px;
 }
-.upload_modal-holder input, .upload_modal-holder textarea {
+.upload_modal-holder .addfile-btn input, .upload_modal-holder .addfile-btn textarea {
   outline: none;
   color: #4e4e4e;
 
