--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,9 +1,11 @@
 // Here you can add other styles
+
 .navbar {
   .form-inline {
     i {
       color: $navbar-color;
     }
+
     .form-control {
       margin-top: -3px;
       color: $navbar-color;
@@ -13,13 +15,25 @@
         color: $navbar-color;
       }
     }
-    .form-control::-webkit-input-placeholder { color: $navbar-color; }
-    .form-control:-moz-placeholder { color: $navbar-color; }
-    .form-control::-moz-placeholder { color: $navbar-color; }
-    .form-control:-ms-input-placeholder { color: $navbar-color; }
-  }
-  .nav-item {
 
+    .form-control::-webkit-input-placeholder {
+      color: $navbar-color;
+    }
+
+    .form-control:-moz-placeholder {
+      color: $navbar-color;
+    }
+
+    .form-control::-moz-placeholder {
+      color: $navbar-color;
+    }
+
+    .form-control:-ms-input-placeholder {
+      color: $navbar-color;
+    }
+  }
+
+  .nav-item {
     .nav-link.nav-pill {
       width: 32px;
       height: 32px;
@@ -63,14 +77,14 @@
   }
 }
 
-
 .sidebar .sidebar-nav .nav {
   .nav-title {
     span {
       position: relative;
       display: inline-block;
 
-      &:before, &:after {
+      &:after,
+      &:before {
         position: absolute;
         top: 50%;
         width: 25px;
@@ -90,44 +104,53 @@
     }
   }
 }
+
 .modal-dialog.upload_modal-holder {
   max-width: 650px;
 }
+
 .exclude_modal-holder {
   max-width: 900px;
 }
+
 .upload_modal-holder file-drop {
   width: 100%;
   padding: 0 15px;
   margin-bottom: 20px;
   cursor: pointer;
 }
- 
+
 .upload_modal-holder h1 {
   font-size: 20px;
   color: #d66166;
 }
+
 .upload_modal-holder .or {
   font-size: 12px;
   margin: 0;
 }
+
 .upload_modal-holder .drop-zone {
   height: auto !important;
   width: 100%;
   border: 2px dotted #d66166 !important;
   border-radius: 20px !important;
 }
+
 .upload_modal-holder .drag-contbx {
   padding-left: 15px;
   text-align: center;
   width: 100%;
 }
+
 .upload_modal-holder .content {
   height: auto !important;
   color: #3b3b3b !important;
   padding: 0 !important;
 }
-.upload_modal-holder .addfile-btn .button , .upload_modal-holder h3 {
+
+.upload_modal-holder .addfile-btn .button,
+.upload_modal-holder h3 {
   display: block;
   font-size: 16px;
   color: #545454;
@@ -135,37 +158,47 @@
   cursor: pointer;
   margin: 0;
 }
+
 .upload_modal-holder h3 {
   margin-bottom: 15px;
 }
-.upload_modal-holder .addfile-btn input, .upload_modal-holder .addfile-btn textarea {
+
+.upload_modal-holder .addfile-btn input,
+.upload_modal-holder .addfile-btn textarea {
   outline: none;
   color: #4e4e4e;
 
   display: none;
 }
+
 .upload_modal-holder .col-md-9 {
   flex: 0 0 100%;
   max-width: 100%;
 }
+
 .drag_file-holder {
   width: 100%;
   margin: 0;
   cursor: pointer;
-  padding: 10px 0px 15px !important;
+  padding: 10px 0 15px !important;
 }
+
 .upload_modal-holder table {
   border-collapse: collapse;
   width: 100%;
   margin-bottom: 30px;
 }
-.upload_modal-holder .upload-btn, .upload_modal-holder .upload-btn.disabled:hover {
+
+.upload_modal-holder .upload-btn,
+.upload_modal-holder .upload-btn.disabled:hover {
   background: #d66166;
   color: #fff;
   border: 1px solid #d66166;
   padding: 6px 20px;
 }
-.upload_modal-holder .button-clear, .upload_modal-holder .button-clear.disabled:hover {
+
+.upload_modal-holder .button-clear,
+.upload_modal-holder .button-clear.disabled:hover {
   background: transparent;
   padding: 6px 20px;
   color: #d66166;
@@ -173,39 +206,52 @@
   margin-right: 10px;
   min-width: 90px;
 }
+
 .upload_modal-holder .popup_btn-holder button:hover {
   background: #ce4349;
   color: #fff;
   border: 1px solid #ce4349;
 }
+
 .upload_modal-holder table th {
   background: #d4d4d4;
   color: #545454;
   padding: 10px 6px;
   border-bottom: 1px solid #b5b5b5;
 }
+
 .upload_modal-holder table td {
   padding: 6px;
   border-bottom: 1px solid #d0d0d0;
 }
+
 .upload_modal-holder table button {
   background: transparent;
   border: none;
 }
+
 .upload_modal-holder table button i {
   color: #d66166;
 }
+
+.upload_modal-holder table tr td:nth-child(1) {
+  word-break: break-all;
+}
+
 .disabled {
   cursor: not-allowed;
-  opacity: 0.6;
+  opacity: .6;
 }
+
 .multiselect-item-checkbox input[type=checkbox] + div:before {
   color: #d66166 !important;
   border: 2px solid #d66166 !important;
 }
+
 .multiselect-item-checkbox input[type=checkbox]:checked + div:before {
   background: #d66166 !important;
 }
+
 .multiselect-dropdown .dropdown-btn .selected-item {
   border: 1px solid #d66166 !important;
   background: #d66166 !important;
