--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -257,3 +257,63 @@
   background: #d66166 !important;
   margin-bottom: 3px !important;
 }
+input.custom-dropdown, .dropdown-value, .ng2-tag-input {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem !important;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  color: #3e515b;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #e1e6ef;
+  border-radius: 0;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.ng2-tag-input.ng2-tag-input--focused {
+  border-bottom: 2px solid #e1e6ef !important;
+}
+.ng2-tag-input .ng2-tag-input__text-input {
+  height: 32px;
+}
+#industry {
+  border: none;
+}
+.dropdown-list ul li button, .input-styles ul li button {
+  border: none;
+}
+label, .tab-contbx-holder .head {
+  font-size: 11px;
+  color: #586d79;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 5px;
+  display: block;
+  font-family: Roboto,sans-serif;
+  letter-spacing: .01em;
+}
+tag:not(.readonly):not(.tag--editing):focus {
+  background: #d66166 !important;
+  color: #fff !important;
+  -webkit-box-shadow: 0 2px 3px 1px #d4d1d1 !important;
+  box-shadow: 0 2px 3px 1px #d4d1d1 !important;
+}
+.activity-holder .drop-zone {
+  height: auto!important;
+  margin: auto;
+  border: none!important;
+  border-radius: 30px;
+}
+.content {
+  height: auto !important;
+}
+.international-select .multiselect-dropdown .dropdown-btn .dropdown-down {
+  display: none !important;
+}
+.international-select .multiselect-dropdown .dropdown-btn {
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAJBAMAAAD0ltBnAAAAElBMVEUAAABAWXM+U3FNZoA8Um89UnC2JtVOAAAABnRSTlMAFFYKc2BRl6gWAAAANElEQVR4nGNggAAhAwYGZkUGlWAGBlMnBlNXA+aQYAYgBrKAIq5ADlA+BMQBcoPBWpiBHADLJAald8F+GwAAAABJRU5ErkJggg==") !important;
+  background-repeat: no-repeat !important;
+  background-position: calc(100% - 15px) center;
+  border-color: #e1e6ef !important;
+  border-radius: 0 !important;
+}
