--- a/src/app/pages/companies/components/tender-companies-info-list/tender-companies-info-list.component.html
+++ b/src/app/pages/companies/components/tender-companies-info-list/tender-companies-info-list.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-  <div>
-    <button (click)="getCSV()">Export CSV</button>
+<div class="com-tndr-lsthldr">
+  <div class="exp_csvbtn-holder">
+    <button (click)="getCSV()" class="btn btn-primary">Export CSV</button>
   </div>
-  <div>
+  <div class="country-comp_sel-holder">
     <form [formGroup]="tenderCompanyForm" novalidate>
 
       <div class="row">
@@ -32,31 +32,33 @@
     </form>
 
   </div>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>City Name</th>
-        <th>Contact Point</th>
-        <th>Address</th>
-        <th>Fax</th>
-        <th>Phone</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr
-        *ngFor="let item of [1,5,5,41,4,5,4,4,54,45,51,54,54,54,5,4] | paginate: { itemsPerPage: 10, currentPage: page, totalItems: totalData }">
-        <td>John</td>
-        <td>abc@abc.abc</td>
-        <td>Japan</td>
-        <td>Tokio</td>
-        <td>Fugiyama Hill</td>
-        <td>1554545454</td>
-        <td>2332656589</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>City Name</th>
+          <th>Contact Point</th>
+          <th>Address</th>
+          <th>Fax</th>
+          <th>Phone</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          *ngFor="let item of [1,5,5,41,4,5,4,4,54,45,51,54,54,54,5,4] | paginate: { itemsPerPage: 10, currentPage: page, totalItems: totalData }">
+          <td>John</td>
+          <td>abc@abc.abc</td>
+          <td>Japan</td>
+          <td>Tokio</td>
+          <td>Fugiyama Hill</td>
+          <td>1554545454</td>
+          <td>2332656589</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
   <div class="marketplace-pagi-holder">
     <pagination-controls (pageChange)="pageChanged($event)" maxSize="5" previousLabel="Previous" nextLabel="Next"
