--- a/src/app/pages/companies/components/tender-companies-info-list/tender-companies-info-list.component.html
+++ b/src/app/pages/companies/components/tender-companies-info-list/tender-companies-info-list.component.html
@@ -11,7 +11,7 @@
           <div class="">
 
             <ng-select class="search" [items]="[]" [multiple]="true" [addTag]="true"
-              placeholder="Search by multiple Companies name" formControlName="company_names" [isOpen]="false">
+              placeholder="Please enter multiple Companies name" formControlName="company_names" [isOpen]="false">
             </ng-select>
 
           </div>
@@ -35,9 +35,9 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Name</th>
+        <th>Company Name</th>
         <th>Email</th>
-        <th>City Name</th>
+        <th>City</th>
         <th>Contact Point</th>
         <th>Address</th>
         <th>Fax</th>
@@ -46,19 +46,21 @@
     </thead>
     <tbody>
       <tr
-        *ngFor="let item of [1,5,5,41,4,5,4,4,54,45,51,54,54,54,5,4] | paginate: { itemsPerPage: 10, currentPage: page, totalItems: totalData }">
-        <td>John</td>
-        <td>abc@abc.abc</td>
-        <td>Japan</td>
-        <td>Tokio</td>
-        <td>Fugiyama Hill</td>
-        <td>1554545454</td>
-        <td>2332656589</td>
+        *ngFor="let item of tenderCountriesData | paginate: { itemsPerPage: 20, currentPage: page, totalItems: totalData }">
+        <td>{{item?.company_name}}</td>
+        <td>{{item?.email? item?.email : '-'}}</td>
+        <td>{{item?.city_name}}</td>
+        <td>{{item?.contact_point? item?.contact_point: '-'}}</td>
+        <td>{{item?.address}}</td>
+        <td>{{item?.fax ? item?.fax : '-'}}</td>
+        <td>{{item?.phone? item?.phone: '-'}}</td>
       </tr>
     </tbody>
   </table>
+  <p *ngIf="showWaitingMessage">Please Wait...</p>
+  <p *ngIf="showNoRecordMessage">No record found.</p>
 
-  <div class="marketplace-pagi-holder">
+  <div class="marketplace-pagi-holder" *ngIf="!showNoRecordMessage">
     <pagination-controls (pageChange)="pageChanged($event)" maxSize="5" previousLabel="Previous" nextLabel="Next"
       screenReaderCurrentLabel="You're on page">
     </pagination-controls>
