company-list-design 23-08-2019 16:52

--- a/src/app/pages/companies/components/tender-companies-info-list/tender-companies-info-list.component.html
+++ b/src/app/pages/companies/components/tender-companies-info-list/tender-companies-info-list.component.html
@@ -11,7 +11,7 @@
           <!-- <label for="countries" class="col-form-label">Name/s:</label> -->
           <div class="">
 
-            <ng-select class="search" [items]="[]" [multiple]="true" [addTag]="true"
+            <ng-select class="search multiple_comp-input" [items]="[]" [multiple]="true" [addTag]="true"
               placeholder="Please enter multiple Companies name" formControlName="company_names" [isOpen]="false">
             </ng-select>
 
