--- a/src/app/pages/users/components/signup-request-list/details/details.component.scss
+++ b/src/app/pages/users/components/signup-request-list/details/details.component.scss
@@ -182,6 +182,68 @@ a {
 }
 
 .modal-header span {
-    font-size: 32px !important;
+    font-size: 26px !important;
     cursor: pointer !important;
 }
+
+.static_form-holder {
+    display: flex;
+    align-items: center;
+}
+.static_form-holder .form-group {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
+}
+.static_form-holder .custom-radio {
+    display: none;
+  }
+.static_form-holder .custom-radio + label {
+    font-weight: normal;
+    cursor: pointer;
+  }
+.static_form-holder .custom-radio + label span {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 5px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    position: relative;
+    border: 2px solid #d66166;
+  }
+.static_form-holder .custom-radio + label span::before {
+    content: "";
+    opacity: 0;
+    width: 10px;
+    height: 10px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    background-color: #d66166;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    bottom: auto;
+    right: auto;
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -moz-transition: opacity 0.2s;
+    -o-transition: opacity 0.2s;
+    -webkit-transition: opacity 0.2s;
+    transition: opacity 0.2s;
+  }
+.static_form-holder .custom-radio:checked + label span::before {
+    opacity: 1;
+  }
+.static_form-holder .custom-radio:disabled + label {
+    opacity: 0.5;
+  }
+.static_form-holder .custom-radio:disabled + label, .custom-radio:disabled + label span {
+    cursor: default;
+  }
