user-static-design 28-08-2019 14:00

--- a/src/app/pages/tenders/components/tenders-list/details/details.component.scss
+++ b/src/app/pages/tenders/components/tenders-list/details/details.component.scss
@@ -8,13 +8,13 @@
     }
     .modal-body {
         .main-label{
-            font-size: 16px;
+            font-size: 14px;
             width: 100%;
             text-transform: capitalize;
             margin-top: 15px;
             background: #d66166;
             color: #fff;
-            padding: 3px 15px 0;
+            padding: 2px 15px;
             margin-bottom: 0;
         }
         .info {
