--- a/src/app/pages/users/components/signup-request-list/details/details.component.html
+++ b/src/app/pages/users/components/signup-request-list/details/details.component.html
@@ -238,7 +238,7 @@
                         </div>
                         
                     </form>
-                    <div class="row col-12">
+                    <div class="row">
 
                         <div class="pull-left col-sm-12">
                             <div class="row">
