--- a/src/app/pages/users/components/user-statistics/user-statistics.component.scss
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.scss
@@ -26,12 +26,13 @@
     transition: all 250ms ease;
   }
   .radio input[type="radio"]:checked + .radio-label:before {
-    background-color: #3197EE;
+    background-color: #d66166;
+    border-color: #d66166;
     box-shadow: inset 0 0 0 4px #f4f4f4;
   }
   .radio input[type="radio"]:focus + .radio-label:before {
     outline: none;
-    border-color: #3197EE;
+    border-color: #d66166;
   }
   .radio input[type="radio"]:disabled + .radio-label:before {
     box-shadow: inset 0 0 0 4px #f4f4f4;
@@ -41,3 +42,6 @@
   .radio input[type="radio"] + .radio-label:empty:before {
     margin-right: 0;
   }
+  .com-tndr-formhldr .radio-label {
+    cursor: pointer;
+}
