--- a/src/app/modules/authorization/login/login.component.html
+++ b/src/app/modules/authorization/login/login.component.html
@@ -6,7 +6,7 @@
                     <div class="card p-4">
                         <div class="card-body">
                             <div class="logo">
-                                <img src="assets/img/ts-logo.jpeg" alt="Tenderscout admin"/>
+                                <img src="assets/img/ts-logo.jpeg" alt="Orbidal admin"/>
                             </div>
                             <p class="text-muted">Sign In to your account</p>
                             <!--loginForm-->
