--- a/src/app/pages/users/components/user-statistics/user-statistics.component.html
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.html
@@ -1,17 +1,36 @@
 <div class="com-tndr-lsthldr">
 
+  <div class="exp_csvbtn-holder">
+    <button (click)="getCSV()" class="btn btn-primary">Export CSV</button>
+
+    <a #abc csvLink filename="User-Statistics.csv" [data]="csvData"
+      style="visibility: hidden;width: 1px !important;display: inline-block;">Download</a>
+  </div>
+
+  <!-- <div class="exp_csvbtn-holder">
+    </div> -->
+
   <!-- For filter -->
   <div class="com-tndr-formhldr">
+
     <form [formGroup]="statisticFilterForm" novalidate>
+
+      <div>
+        <input type="text" formControlName="search_text" (input)="page=1" placeholder="Search by name/email">
+      </div>
+
       <div class="radio">
-          <input id="all" name="filter" type="radio" formControlName="filter" value="" checked>
-          <label for="all" class="radio-label">ALL</label>
-        </div>
-      
-        <div class="radio">
-          <input id="30days" name="filter" type="radio" formControlName="filter" value="30">
-          <label  for="30days" class="radio-label">Past 30 Days</label>
-        </div>
+        <input id="all" name="filter" type="radio" formControlName="days" value="" (change)="page=1">
+        <label for="all" class="radio-label">ALL</label>
+      </div>
+
+      <div class="radio">
+        <input id="30days" name="filter" type="radio" formControlName="days" value="30" (change)="page=1">
+        <label for="30days" class="radio-label">Past 30 Days</label>
+      </div>
+
+      <button (click)="ngOnInit()" class="btn btn-primary">Reset Filters</button>
+
     </form>
   </div>
 
@@ -19,13 +38,18 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th *ngFor="let item of tableHeadNames">{{item}}</th>
+          <th *ngFor="let item of tableHeadNames; let i=index">{{item.title}} <p *ngIf="i>0"><span
+                *ngIf="statisticFilterForm.controls[item.key].value === '' || statisticFilterForm.controls[item.key].value === 'asc'"
+                (click)="statisticFilterForm.controls[item.key].setValue('desc')">up</span><span
+                *ngIf="statisticFilterForm.controls[item.key].value === 'desc'"
+                (click)="statisticFilterForm.controls[item.key].setValue('asc')">down</span></p>
+          </th>
         </tr>
       </thead>
       <tbody>
         <tr
-          *ngFor="let item of userStatistics | paginate: { itemsPerPage: 24, currentPage: page, totalItems: totalData }">
-          <td>{{item.full_name}}</td>
+          *ngFor="let item of userStatistics | paginate: { itemsPerPage: 20, currentPage: page, totalItems: totalData }">
+          <td>{{item.full_name}} <span class="email-set">{{'<' + item.email + '>'}}</span> </td>
           <td>{{item.added_to_perform}}</td>
           <td>{{item.bid_assets_count}}</td>
           <td>{{item.emails_opened}}</td>
@@ -34,12 +58,10 @@
           <td>{{item.monitors_count}}</td>
           <td>{{item.move_to_complete}}</td>
           <td>{{item.move_to_qualify}}</td>
-          <td>{{item.sign_in_count}}</td>
         </tr>
       </tbody>
     </table>
   </div>
-  <p *ngIf="showWaitingMessage">Please Wait...</p>
 
   <div class="marketplace-pagi-holder" *ngIf="totalData>0">
     <pagination-controls (pageChange)="pageChanged($event)" maxSize="5" previousLabel="Previous" nextLabel="Next"
