--- a/src/app/pages/users/components/user-statistics/user-statistics.component.scss
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.scss
@@ -1,47 +1,68 @@
 .com-tndr-formhldr form {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
 .radio {
-    margin: 0.5rem;
-  }
-  .radio input[type="radio"] {
-    position: absolute;
-    opacity: 0;
-  }
-  .radio input[type="radio"] + .radio-label:before {
-    content: '';
-    background: #f4f4f4;
-    border-radius: 100%;
-    border: 1px solid #b4b4b4;
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    position: relative;
-    top: 0;
-    margin-right: 5px;
-    vertical-align: top;
-    cursor: pointer;
-    text-align: center;
-    transition: all 250ms ease;
-  }
-  .radio input[type="radio"]:checked + .radio-label:before {
-    background-color: #d66166;
-    border-color: #d66166;
-    box-shadow: inset 0 0 0 4px #f4f4f4;
-  }
-  .radio input[type="radio"]:focus + .radio-label:before {
-    outline: none;
-    border-color: #d66166;
-  }
-  .radio input[type="radio"]:disabled + .radio-label:before {
-    box-shadow: inset 0 0 0 4px #f4f4f4;
-    border-color: #b4b4b4;
-    background: #b4b4b4;
-  }
-  .radio input[type="radio"] + .radio-label:empty:before {
-    margin-right: 0;
-  }
-  .com-tndr-formhldr .radio-label {
-    cursor: pointer;
+  margin: .5rem;
+}
+
+.radio input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+}
+
+.radio input[type="radio"] + .radio-label:before {
+  content: '';
+  background: #f4f4f4;
+  border-radius: 100%;
+  border: 1px solid #b4b4b4;
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  position: relative;
+  top: 0;
+  margin-right: 5px;
+  vertical-align: top;
+  cursor: pointer;
+  text-align: center;
+  transition: all 250ms ease;
+}
+
+.radio input[type="radio"]:checked + .radio-label:before {
+  background-color: #d66166;
+  border-color: #d66166;
+  box-shadow: inset 0 0 0 4px #f4f4f4;
+}
+
+.radio input[type="radio"]:focus + .radio-label:before {
+  outline: none;
+  border-color: #d66166;
+}
+
+.radio input[type="radio"]:disabled + .radio-label:before {
+  box-shadow: inset 0 0 0 4px #f4f4f4;
+  border-color: #b4b4b4;
+  background: #b4b4b4;
+}
+
+.radio input[type="radio"] + .radio-label:empty:before {
+  margin-right: 0;
+}
+
+.com-tndr-formhldr .radio-label {
+  cursor: pointer;
+}
+
+.email-set{
+  font-size: 12px;
+  color: blue;
+}
+
+.exp_csvbtn-holder {
+  text-align: right;
+  position: relative;
+}
+.exp_csvbtn-holder button {
+  margin-top: -55px;
 }
