Updated code 3 Sept. 19:28

--- a/src/app/pages/claimed-companies/components/actions-modal/actions-modal.component.html
+++ b/src/app/pages/claimed-companies/components/actions-modal/actions-modal.component.html
@@ -11,6 +11,10 @@
         </div>
     </div>
 
+    <div class="dropdown" *ngIf="rowData.status !== 'pending'">
+        -
+    </div>
+
     <!-- Modal for Approve -->
     <ng-template #approveRejectModal>
         <div class="modal-header">
