--- a/src/app/pages/claimed-companies/components/list-claimed/list-claimed.component.scss
+++ b/src/app/pages/claimed-companies/components/list-claimed/list-claimed.component.scss
@@ -11,3 +11,7 @@
 button.btn.btn-primary {
     margin-left: 10px;
  }
+
+ :host ng2-smart-table thead > tr > th  { 
+    background-color:blue;  
+}
