--- a/src/app/pages/users/components/user-statistics/user-statistics.component.html
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.html
@@ -29,7 +29,7 @@
         <label for="30days" class="radio-label">Past 30 Days</label>
       </div>
 
-      <button (click)="ngOnInit()" class="btn btn-primary">Clear Filters</button>
+      <button (click)="ngOnInit()" class="btn btn-primary">Reset</button>
 
     </form>
   </div>
@@ -39,14 +39,14 @@
       <thead>
         <tr>
           <th *ngFor="let item of tableHeadNames; let i=index">{{item.title}}
-            <!-- <p *ngIf="i>0"><span class="set-cursor"
+            <p *ngIf="i>0"><span class="set-cursor"
                 *ngIf="statisticFilterForm.controls[item.key].value === '' || statisticFilterForm.controls[item.key].value === 'asc'"
-                (click)="statisticFilterForm.controls[item.key].setValue('desc')"><i class="fa fa-arrow-up"
+                (click)="selectedSortItemHandler(item.key, 'desc'); statisticFilterForm.controls[item.key].setValue('desc')"><i class="fa fa-arrow-up"
                   aria-hidden="true"></i></span><span class="set-cursor"
                 *ngIf="statisticFilterForm.controls[item.key].value === 'desc'"
-                (click)="statisticFilterForm.controls[item.key].setValue('asc')"><i class="fa fa-arrow-down"
+                (click)="selectedSortItemHandler(item.key, 'asc'); statisticFilterForm.controls[item.key].setValue('asc')"><i class="fa fa-arrow-down"
                   aria-hidden="true"></i></span>
-            </p> -->
+            </p>
           </th>
         </tr>
       </thead>
@@ -64,6 +64,8 @@
           <td>{{item.move_to_qualify}}</td>
         </tr>
       </tbody>
+      <span *ngIf="userStatistics.length === 0">No Data Found!</span>
+
     </table>
   </div>
 
