--- a/src/app/pages/users/components/user-statistics/user-statistics.component.html
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.html
@@ -7,16 +7,14 @@
       style="visibility: hidden;width: 1px !important;display: inline-block;">Download</a>
   </div>
 
-  <!-- <div class="exp_csvbtn-holder">
-    </div> -->
-
   <!-- For filter -->
   <div class="com-tndr-formhldr">
 
     <form [formGroup]="statisticFilterForm" novalidate>
 
-      <div>
-        <input type="text" formControlName="search_text" (input)="page=1" placeholder="Search by name/email">
+      <div class="row col-md-4">
+        <input type="text" formControlName="search_text" (input)="page=1" placeholder="Search by username/email"
+          class="form-control">
       </div>
 
       <div class="radio">
@@ -38,15 +36,14 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th *ngFor="let item of tableHeadNames; let i=index">{{item.title}}
-            <p *ngIf="i>0"><span class="set-cursor"
-                *ngIf="statisticFilterForm.controls[item.key].value === '' || statisticFilterForm.controls[item.key].value === 'asc'"
-                (click)="selectedSortItemHandler(item.key, 'desc'); statisticFilterForm.controls[item.key].setValue('desc')"><i class="fa fa-arrow-up"
-                  aria-hidden="true"></i></span><span class="set-cursor"
-                *ngIf="statisticFilterForm.controls[item.key].value === 'desc'"
-                (click)="selectedSortItemHandler(item.key, 'asc'); statisticFilterForm.controls[item.key].setValue('asc')"><i class="fa fa-arrow-down"
+          <th class="set-cursor" *ngFor="let item of tableHeadNames; let i=index" (click)="setSortEventHandler(item)">
+            {{item.title}}
+            <span *ngIf="i>0"><span class="set-cursor"
+                *ngIf="statisticFilterForm.controls[item.key].value === '' || statisticFilterForm.controls[item.key].value === 'asc'"><i
+                  class="fa fa-arrow-up" aria-hidden="true"></i></span><span class="set-cursor"
+                *ngIf="statisticFilterForm.controls[item.key].value === 'desc'"><i class="fa fa-arrow-down"
                   aria-hidden="true"></i></span>
-            </p>
+            </span>
           </th>
         </tr>
       </thead>
@@ -56,7 +53,6 @@
           <td>{{item.full_name}} <span class="email-set">{{'<' + item.email + '>'}}</span> </td>
           <td>{{item.added_to_perform}}</td>
           <td>{{item.bid_assets_count}}</td>
-          <td>{{item.emails_opened}}</td>
           <td>{{item.emails_sent}}</td>
           <td>{{item.login_sessions}}</td>
           <td>{{item.monitors_count}}</td>
