--- a/src/app/pages/users/components/user-statistics/user-statistics.component.scss
+++ b/src/app/pages/users/components/user-statistics/user-statistics.component.scss
@@ -1,6 +1,7 @@
 .com-tndr-formhldr form {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .radio {
@@ -57,6 +58,7 @@
 .email-set {
   font-size: 12px;
   color: blue;
+  display: block;
 }
 
 .exp_csvbtn-holder {
@@ -70,4 +72,10 @@
 
 .set-cursor {
   cursor: pointer;
+}
+
+.table thead th {
+  vertical-align: middle !important;
+  border-bottom: 2px solid #c0cadd;
+  line-height: 15px;
 }
