--- a/src/app/pages/users/components/signup-request-list/details/details.component.html
+++ b/src/app/pages/users/components/signup-request-list/details/details.component.html
@@ -247,9 +247,13 @@
                                 <ng-container *ngFor="let item of userStatisticsData">
                                     <div [ngClass]="(request == 'countries') ? 'col-xs-12 padding15': ''"
                                         class="col-sm-3" *ngIf="item.key!=='user_id'">
-                                        <label class="main-label">{{ replaceUnderscore(item.key) }}</label>
+                                        <label
+                                            class="main-label">{{ item.key === 'created_at'?'Origin Date': replaceUnderscore(item.key) }}</label>
                                         <div class="info">
-                                            <span>{{ item.value }} </span>
+                                            <span
+                                                *ngIf="item.key === 'created_at'">{{ item.value | date: 'dd/MM/yyyy' }}
+                                            </span>
+                                            <span *ngIf="item.key !== 'created_at'">{{ item.value }} </span>
                                         </div>
                                     </div>
                                 </ng-container>
